tried to fix the layout shift but can't seem to find what is in trouble

--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -42,7 +42,11 @@
         display: none;
     }
 
-
+    footer {
+    box-shadow: 1px -1px 2px orange;
+    min-width: 705px;
+    background-color: var(--accent-color);
+}
 
 
 
